# realsense_person

./: CMakeLists.txt  README.md  package.xml
.github/: ISSUE_TEMPLATE.md
cfg/: person_params.cfg
include/realsense_person/: constants.h  person_nodelet.h
launch/: person_sample.launch
msg/: BoundingBox.msg  PersonBody.msg  PersonDetection.msg  PersonFace.msg  PersonId.msg  PersonSkeleton.msg  PersonTracking.msg  RegisteredPoint.msg
src/: person_nodelet.cpp
srv/: GetTrackingId.srv  Recognize.srv  Register.srv  Reinforce.srv  StartTracking.srv  StopTracking.srv
test/: person_minset.cpp  person_minset.h  person_minset.test
